@@ -7,14 +7,19 @@
 }@args:
 let
   icons = if args ? icons then args.icons else null;
+  nixosConfig = if args ? nixosConfig then args.nixosConfig else null;
   inherit (lib)
     mkEnableOption
     mkIf
     mkDefault
     mkOption
+    optionals
     types
     ;
   cfg = config.profiles.firefox.shyfox;
+
+  # append the betterfox patch to the shyfox user_js
+  betterfox_js = builtins.readFile (pkgs.betterfox + "/user.js");
 in
 {
   options.profiles.firefox.shyfox = {
@@ -31,12 +36,17 @@ in
     programs.firefox.profiles.default = {
       id = 0;
       extensions.packages =
-        (with pkgs.nur.repos.rycee.firefox-addons; [
-          ublock-origin
-          onepassword-password-manager
-          darkreader
-          sidebery
-        ])
+        (
+          with pkgs.nur.repos.rycee.firefox-addons;
+          [
+            ublock-origin
+            darkreader
+            sidebery
+          ]
+          ++ optionals (nixosConfig != null && nixosConfig.programs._1password-gui.enable) [
+            onepassword-password-manager
+          ]
+        )
         ++ (with pkgs; [
           userchrome-toggle-extended
         ]);
@@ -45,7 +55,8 @@ in
         engines = import ../search-engines.nix { inherit pkgs icons; };
         force = true;
       };
-      extraConfig = builtins.readFile (pkgs.shyfox + "/user.js");
+      # apply betterfox settings on top of shyfox
+      extraConfig = builtins.readFile (pkgs.shyfox + "/user.js") + betterfox_js;
     };
     # apply the chrome patch, inheriting any configuration such as a different wallpaper
     home.file.".mozilla/firefox/default/chrome".source =
